2006-03-22  Andrey Slusar  <anrays@gmail.com>

	======= Release 5.1.4ds ========================
	------- CVS tag R514 ---------------------------
	* configure.in: Bump to 5.1.4ds.
	* version.h (PATCHLEVEL): Ditto.

2006-02-26  Andrey Slusar  <anray@users.sourceforge.net>

	* src/areafix/areafix.c (cmd_sub): Fix build warning.

2005-11-23  Andrey Slusar  <anray@users.sourceforge.net>

	* src/tick/ftntick.c (process_tic): Fix detecting
	options from uplinks(thanks to Alexey Illarionov).
	* src/toss/ftntoss.c: Added int_uplinks flag.
	(do_echomail): Fix detecting options from uplinks,
	added initing uplinks file(bug, reported by Pasha.K).

2005-04-23  Andrey Slusar  <anray@users.sourceforge.net>

	======= Release 5.1.3ds ========================
	------- CVS tag R513 ---------------------------
	* version.h (EXTRAVERSION): Bump to 5.1.3ds.
	* configure.in: Ditto.
	* packages/freebsd: Ditto.
	* doc/FAQ.ru: Now this is a confiuration mini FAQ
	(part 10 of FAQ_Config.ru).
	* doc/FAQ_Config.ru: Added full fidogate russian
	configuration FAQ.
	* doc/README.ru: Update.

2005-04-19  Andrey Slusar  <anray@users.sourceforge.net>

	* Changes.ru: Update.
	* doc/README.ru: Ditto.
	* doc/examples/dyff/fidogate.conf.sample.in:
	Ditto.
	* src/areafix/areafix.c (areafix_auth_check):
	Removed option AllowEmptyPwd. It's broke the
	areafix keys checking.
	* src/toss/ftnpack.c (do_pack): Fixed checking
	busy node(modified patch from Zhenya Kaluta).
	* src/common/lock.c (lock_lockfile_id): Fixed
	checking locks, not containing pid(patch from
	Zhenya Kaluta).

2004-12-10  Andrey Slusar  <anray@users.sourceforge.net>

	======= Release 5.1.2ds ========================
	------- CVS tag R512 ---------------------------	
	* version.h (EXTRAVERSION): bump to 5.1.2ds.
	* configure.in: ditto.

2004-12-01  Andrey Slusar  <anray@users.sourceforge.net>

	* version.h (EXTRAVERSION): bump to 5.1.2ds-rc4.
	* configure.in: ditto.
	* Changes.ru: update.
	* src/common/packet.c (pkt_get_msg_hdr): remove