@@ -4,7 +4,7 @@
 # Created: 1993-05-16
 # Public domain
 
-# $Id: mkinstalldirs,v 5.3 2006/03/22 21:14:29 anray Exp $
+# $Id: mkinstalldirs,v 5.4 2006/05/18 18:44:10 anray Exp $
 
 errstatus=0
 
